compiler_all_phases/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    START

Grammar

Rule 0     S' -> Program
Rule 1     Program -> CLASS PROGRAM LBRACE FieldDecls MethodDecls RBRACE
Rule 2     FieldDecls -> FieldDecl FieldDecls
Rule 3     FieldDecls -> empty
Rule 4     FieldDecl -> Type IDENTIFIER SEMICOLON
Rule 5     FieldDecl -> Type IDENTIFIER LBRACKET IntLiteral RBRACKET SEMICOLON
Rule 6     MethodDecls -> MethodDecl MethodDecls
Rule 7     MethodDecls -> empty
Rule 8     MethodDecl -> Type IDENTIFIER LPAREN ParamList RPAREN Block
Rule 9     MethodDecl -> VOID IDENTIFIER LPAREN RPAREN Block
Rule 10    ParamList -> Type IDENTIFIER
Rule 11    ParamList -> Type IDENTIFIER COMMA ParamList
Rule 12    Block -> LBRACE VarDecls Statements RBRACE
Rule 13    VarDecls -> VarDecl VarDecls
Rule 14    VarDecls -> empty
Rule 15    VarDecl -> Type IDENTIFIER SEMICOLON
Rule 16    Type -> INT
Rule 17    Type -> BOOLEAN
Rule 18    Statements -> Statement Statements
Rule 19    Statements -> empty
Rule 20    Statement -> Location ASSIGN Expression SEMICOLON
Rule 21    Statement -> MethodCall SEMICOLON
Rule 22    Statement -> IF LPAREN Expression RPAREN Block
Rule 23    Statement -> IF LPAREN Expression RPAREN Block ELSE Block
Rule 24    Statement -> WHILE LPAREN Expression RPAREN Block
Rule 25    Statement -> RETURN Expression SEMICOLON
Rule 26    Statement -> RETURN SEMICOLON
Rule 27    Statement -> BREAK SEMICOLON
Rule 28    Statement -> CONTINUE SEMICOLON
Rule 29    Statement -> Block
Rule 30    MethodCall -> IDENTIFIER LPAREN RPAREN
Rule 31    MethodCall -> IDENTIFIER LPAREN ExpressionList RPAREN
Rule 32    MethodCall -> CALLOUT LPAREN StringLiteral RPAREN
Rule 33    MethodCall -> CALLOUT LPAREN StringLiteral COMMA CalloutArgList RPAREN
Rule 34    Location -> IDENTIFIER
Rule 35    Location -> IDENTIFIER LBRACKET Expression RBRACKET
Rule 36    ExpressionList -> Expression
Rule 37    ExpressionList -> Expression COMMA ExpressionList
Rule 38    Expression -> Location
Rule 39    Expression -> MethodCall
Rule 40    Expression -> Literal
Rule 41    Expression -> Expression BinOp Expression
Rule 42    Expression -> MINUS Expression
Rule 43    Expression -> NOT Expression
Rule 44    Expression -> LPAREN Expression RPAREN
Rule 45    CalloutArgList -> CalloutArg
Rule 46    CalloutArgList -> CalloutArg COMMA CalloutArgList
Rule 47    CalloutArg -> Expression
Rule 48    CalloutArg -> StringLiteral
Rule 49    BinOp -> ArithOp
Rule 50    BinOp -> RelOp
Rule 51    BinOp -> EqOp
Rule 52    BinOp -> CondOp
Rule 53    ArithOp -> PLUS
Rule 54    ArithOp -> MINUS
Rule 55    ArithOp -> MULTIPLY
Rule 56    ArithOp -> DIVIDE
Rule 57    ArithOp -> MODULO
Rule 58    ArithOp -> SHIFT_L
Rule 59    ArithOp -> SHIFT_R
Rule 60    ArithOp -> LSHIFT_R
Rule 61    RelOp -> GREATER
Rule 62    RelOp -> LESS
Rule 63    RelOp -> GREATER_EQUAL
Rule 64    RelOp -> LESS_EQUAL
Rule 65    EqOp -> EQUAL
Rule 66    EqOp -> NOT_EQUAL
Rule 67    CondOp -> LOGICAL_AND
Rule 68    CondOp -> LOGICAL_OR
Rule 69    Literal -> IntLiteral
Rule 70    Literal -> CharLiteral
Rule 71    Literal -> BoolLiteral
Rule 72    IntLiteral -> DecimalLiteral
Rule 73    IntLiteral -> HexLiteral
Rule 74    DecimalLiteral -> NUMBER
Rule 75    HexLiteral -> HEX_NUMBER
Rule 76    BoolLiteral -> TRUE
Rule 77    BoolLiteral -> FALSE
Rule 78    CharLiteral -> CHAR_LITERAL
Rule 79    StringLiteral -> STRING_LITERAL
Rule 80    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 20
BOOLEAN              : 17
BREAK                : 27
CALLOUT              : 32 33
CHAR_LITERAL         : 78
CLASS                : 1
COMMA                : 11 33 37 46
CONTINUE             : 28
DIVIDE               : 56
ELSE                 : 23
EQUAL                : 65
FALSE                : 77
GREATER              : 61
GREATER_EQUAL        : 63
HEX_NUMBER           : 75
IDENTIFIER           : 4 5 8 9 10 11 15 30 31 34 35
IF                   : 22 23
INT                  : 16
LBRACE               : 1 12
LBRACKET             : 5 35
LESS                 : 62
LESS_EQUAL           : 64
LOGICAL_AND          : 67
LOGICAL_OR           : 68
LPAREN               : 8 9 22 23 24 30 31 32 33 44
LSHIFT_R             : 60
MINUS                : 42 54
MODULO               : 57
MULTIPLY             : 55
NOT                  : 43
NOT_EQUAL            : 66
NUMBER               : 74
PLUS                 : 53
PROGRAM              : 1
RBRACE               : 1 12
RBRACKET             : 5 35
RETURN               : 25 26
RPAREN               : 8 9 22 23 24 30 31 32 33 44
SEMICOLON            : 4 5 15 20 21 25 26 27 28
SHIFT_L              : 58
SHIFT_R              : 59
START                : 
STRING_LITERAL       : 79
TRUE                 : 76
VOID                 : 9
WHILE                : 24
error                : 

Nonterminals, with rules where they appear

ArithOp              : 49
BinOp                : 41
Block                : 8 9 22 23 23 24 29
BoolLiteral          : 71
CalloutArg           : 45 46
CalloutArgList       : 33 46
CharLiteral          : 70
CondOp               : 52
DecimalLiteral       : 72
EqOp                 : 51
Expression           : 20 22 23 24 25 35 36 37 41 41 42 43 44 47
ExpressionList       : 31 37
FieldDecl            : 2
FieldDecls           : 1 2
HexLiteral           : 73
IntLiteral           : 5 69
Literal              : 40
Location             : 20 38
MethodCall           : 21 39
MethodDecl           : 6
MethodDecls          : 1 6
ParamList            : 8 11
Program              : 0
RelOp                : 50
Statement            : 18
Statements           : 12 18
StringLiteral        : 32 33 48
Type                 : 4 5 8 10 11 15
VarDecl              : 13
VarDecls             : 12 13
empty                : 3 7 14 19

Parsing method: SLR

state 0

    (0) S' -> . Program
    (1) Program -> . CLASS PROGRAM LBRACE FieldDecls MethodDecls RBRACE

    CLASS           shift and go to state 2

    Program                        shift and go to state 1

state 1

    (0) S' -> Program .



state 2

    (1) Program -> CLASS . PROGRAM LBRACE FieldDecls MethodDecls RBRACE

    PROGRAM         shift and go to state 3


state 3

    (1) Program -> CLASS PROGRAM . LBRACE FieldDecls MethodDecls RBRACE

    LBRACE          shift and go to state 4


state 4

    (1) Program -> CLASS PROGRAM LBRACE . FieldDecls MethodDecls RBRACE
    (2) FieldDecls -> . FieldDecl FieldDecls
    (3) FieldDecls -> . empty
    (4) FieldDecl -> . Type IDENTIFIER SEMICOLON
    (5) FieldDecl -> . Type IDENTIFIER LBRACKET IntLiteral RBRACKET SEMICOLON
    (80) empty -> .
    (16) Type -> . INT
    (17) Type -> . BOOLEAN

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    VOID            reduce using rule 80 (empty -> .)
    RBRACE          reduce using rule 80 (empty -> .)
    IF              reduce using rule 80 (empty -> .)
    WHILE           reduce using rule 80 (empty -> .)
    RETURN          reduce using rule 80 (empty -> .)
    BREAK           reduce using rule 80 (empty -> .)
    CONTINUE        reduce using rule 80 (empty -> .)
    LBRACE          reduce using rule 80 (empty -> .)
    IDENTIFIER      reduce using rule 80 (empty -> .)
    CALLOUT         reduce using rule 80 (empty -> .)
    INT             shift and go to state 9
    BOOLEAN         shift and go to state 10

  ! INT             [ reduce using rule 80 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 80 (empty -> .) ]

    FieldDecls                     shift and go to state 5
    FieldDecl                      shift and go to state 6
    empty                          shift and go to state 7
    Type                           shift and go to state 8

state 5

    (1) Program -> CLASS PROGRAM LBRACE FieldDecls . MethodDecls RBRACE
    (6) MethodDecls -> . MethodDecl MethodDecls
    (7) MethodDecls -> . empty
    (8) MethodDecl -> . Type IDENTIFIER LPAREN ParamList RPAREN Block
    (9) MethodDecl -> . VOID IDENTIFIER LPAREN RPAREN Block
    (80) empty -> .
    (16) Type -> . INT
    (17) Type -> . BOOLEAN

  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    VOID            shift and go to state 15
    RBRACE          reduce using rule 80 (empty -> .)
    IF              reduce using rule 80 (empty -> .)
    WHILE           reduce using rule 80 (empty -> .)
    RETURN          reduce using rule 80 (empty -> .)
    BREAK           reduce using rule 80 (empty -> .)
    CONTINUE        reduce using rule 80 (empty -> .)
    LBRACE          reduce using rule 80 (empty -> .)
    IDENTIFIER      reduce using rule 80 (empty -> .)
    CALLOUT         reduce using rule 80 (empty -> .)
    INT             shift and go to state 9
    BOOLEAN         shift and go to state 10

  ! INT             [ reduce using rule 80 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 80 (empty -> .) ]
  ! VOID            [ reduce using rule 80 (empty -> .) ]

    MethodDecls                    shift and go to state 11
    MethodDecl                     shift and go to state 12
    empty                          shift and go to state 13
    Type                           shift and go to state 14

state 6

    (2) FieldDecls -> FieldDecl . FieldDecls
    (2) FieldDecls -> . FieldDecl FieldDecls
    (3) FieldDecls -> . empty
    (4) FieldDecl -> . Type IDENTIFIER SEMICOLON
    (5) FieldDecl -> . Type IDENTIFIER LBRACKET IntLiteral RBRACKET SEMICOLON
    (80) empty -> .
    (16) Type -> . INT
    (17) Type -> . BOOLEAN

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    VOID            reduce using rule 80 (empty -> .)
    RBRACE          reduce using rule 80 (empty -> .)
    IF              reduce using rule 80 (empty -> .)
    WHILE           reduce using rule 80 (empty -> .)
    RETURN          reduce using rule 80 (empty -> .)
    BREAK           reduce using rule 80 (empty -> .)
    CONTINUE        reduce using rule 80 (empty -> .)
    LBRACE          reduce using rule 80 (empty -> .)
    IDENTIFIER      reduce using rule 80 (empty -> .)
    CALLOUT         reduce using rule 80 (empty -> .)
    INT             shift and go to state 9
    BOOLEAN         shift and go to state 10

  ! INT             [ reduce using rule 80 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 80 (empty -> .) ]

    FieldDecl                      shift and go to state 6
    FieldDecls                     shift and go to state 16
    empty                          shift and go to state 7
    Type                           shift and go to state 8

state 7

    (3) FieldDecls -> empty .

    INT             reduce using rule 3 (FieldDecls -> empty .)
    BOOLEAN         reduce using rule 3 (FieldDecls -> empty .)
    VOID            reduce using rule 3 (FieldDecls -> empty .)
    RBRACE          reduce using rule 3 (FieldDecls -> empty .)


state 8

    (4) FieldDecl -> Type . IDENTIFIER SEMICOLON
    (5) FieldDecl -> Type . IDENTIFIER LBRACKET IntLiteral RBRACKET SEMICOLON

    IDENTIFIER      shift and go to state 17


state 9

    (16) Type -> INT .

    IDENTIFIER      reduce using rule 16 (Type -> INT .)


state 10

    (17) Type -> BOOLEAN .

    IDENTIFIER      reduce using rule 17 (Type -> BOOLEAN .)


state 11

    (1) Program -> CLASS PROGRAM LBRACE FieldDecls MethodDecls . RBRACE

    RBRACE          shift and go to state 18


state 12

    (6) MethodDecls -> MethodDecl . MethodDecls
    (6) MethodDecls -> . MethodDecl MethodDecls
    (7) MethodDecls -> . empty
    (8) MethodDecl -> . Type IDENTIFIER LPAREN ParamList RPAREN Block
    (9) MethodDecl -> . VOID IDENTIFIER LPAREN RPAREN Block
    (80) empty -> .
    (16) Type -> . INT
    (17) Type -> . BOOLEAN

  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    VOID            shift and go to state 15
    RBRACE          reduce using rule 80 (empty -> .)
    IF              reduce using rule 80 (empty -> .)
    WHILE           reduce using rule 80 (empty -> .)
    RETURN          reduce using rule 80 (empty -> .)
    BREAK           reduce using rule 80 (empty -> .)
    CONTINUE        reduce using rule 80 (empty -> .)
    LBRACE          reduce using rule 80 (empty -> .)
    IDENTIFIER      reduce using rule 80 (empty -> .)
    CALLOUT         reduce using rule 80 (empty -> .)
    INT             shift and go to state 9
    BOOLEAN         shift and go to state 10

  ! INT             [ reduce using rule 80 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 80 (empty -> .) ]
  ! VOID            [ reduce using rule 80 (empty -> .) ]

    MethodDecl                     shift and go to state 12
    MethodDecls                    shift and go to state 19
    empty                          shift and go to state 13
    Type                           shift and go to state 14

state 13

    (7) MethodDecls -> empty .

    RBRACE          reduce using rule 7 (MethodDecls -> empty .)


state 14

    (8) MethodDecl -> Type . IDENTIFIER LPAREN ParamList RPAREN Block

    IDENTIFIER      shift and go to state 20


state 15

    (9) MethodDecl -> VOID . IDENTIFIER LPAREN RPAREN Block

    IDENTIFIER      shift and go to state 21


state 16

    (2) FieldDecls -> FieldDecl FieldDecls .

    INT             reduce using rule 2 (FieldDecls -> FieldDecl FieldDecls .)
    BOOLEAN         reduce using rule 2 (FieldDecls -> FieldDecl FieldDecls .)
    VOID            reduce using rule 2 (FieldDecls -> FieldDecl FieldDecls .)
    RBRACE          reduce using rule 2 (FieldDecls -> FieldDecl FieldDecls .)


state 17

    (4) FieldDecl -> Type IDENTIFIER . SEMICOLON
    (5) FieldDecl -> Type IDENTIFIER . LBRACKET IntLiteral RBRACKET SEMICOLON

    SEMICOLON       shift and go to state 22
    LBRACKET        shift and go to state 23


state 18

    (1) Program -> CLASS PROGRAM LBRACE FieldDecls MethodDecls RBRACE .

    $end            reduce using rule 1 (Program -> CLASS PROGRAM LBRACE FieldDecls MethodDecls RBRACE .)


state 19

    (6) MethodDecls -> MethodDecl MethodDecls .

    RBRACE          reduce using rule 6 (MethodDecls -> MethodDecl MethodDecls .)


state 20

    (8) MethodDecl -> Type IDENTIFIER . LPAREN ParamList RPAREN Block

    LPAREN          shift and go to state 24


state 21

    (9) MethodDecl -> VOID IDENTIFIER . LPAREN RPAREN Block

    LPAREN          shift and go to state 25


state 22

    (4) FieldDecl -> Type IDENTIFIER SEMICOLON .

    INT             reduce using rule 4 (FieldDecl -> Type IDENTIFIER SEMICOLON .)
    BOOLEAN         reduce using rule 4 (FieldDecl -> Type IDENTIFIER SEMICOLON .)
    VOID            reduce using rule 4 (FieldDecl -> Type IDENTIFIER SEMICOLON .)
    RBRACE          reduce using rule 4 (FieldDecl -> Type IDENTIFIER SEMICOLON .)


state 23

    (5) FieldDecl -> Type IDENTIFIER LBRACKET . IntLiteral RBRACKET SEMICOLON
    (72) IntLiteral -> . DecimalLiteral
    (73) IntLiteral -> . HexLiteral
    (74) DecimalLiteral -> . NUMBER
    (75) HexLiteral -> . HEX_NUMBER

    NUMBER          shift and go to state 29
    HEX_NUMBER      shift and go to state 30

    IntLiteral                     shift and go to state 26
    DecimalLiteral                 shift and go to state 27
    HexLiteral                     shift and go to state 28

state 24

    (8) MethodDecl -> Type IDENTIFIER LPAREN . ParamList RPAREN Block
    (10) ParamList -> . Type IDENTIFIER
    (11) ParamList -> . Type IDENTIFIER COMMA ParamList
    (16) Type -> . INT
    (17) Type -> . BOOLEAN

    INT             shift and go to state 9
    BOOLEAN         shift and go to state 10

    Type                           shift and go to state 31
    ParamList                      shift and go to state 32

state 25

    (9) MethodDecl -> VOID IDENTIFIER LPAREN . RPAREN Block

    RPAREN          shift and go to state 33


state 26

    (5) FieldDecl -> Type IDENTIFIER LBRACKET IntLiteral . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 34


state 27

    (72) IntLiteral -> DecimalLiteral .

    RBRACKET        reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    SEMICOLON       reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    RPAREN          reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    COMMA           reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    PLUS            reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    MINUS           reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    MULTIPLY        reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    DIVIDE          reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    MODULO          reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    SHIFT_L         reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    SHIFT_R         reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    LSHIFT_R        reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    GREATER         reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    LESS            reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    GREATER_EQUAL   reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    LESS_EQUAL      reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    EQUAL           reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    NOT_EQUAL       reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    LOGICAL_AND     reduce using rule 72 (IntLiteral -> DecimalLiteral .)
    LOGICAL_OR      reduce using rule 72 (IntLiteral -> DecimalLiteral .)


state 28

    (73) IntLiteral -> HexLiteral .

    RBRACKET        reduce using rule 73 (IntLiteral -> HexLiteral .)
    SEMICOLON       reduce using rule 73 (IntLiteral -> HexLiteral .)
    RPAREN          reduce using rule 73 (IntLiteral -> HexLiteral .)
    COMMA           reduce using rule 73 (IntLiteral -> HexLiteral .)
    PLUS            reduce using rule 73 (IntLiteral -> HexLiteral .)
    MINUS           reduce using rule 73 (IntLiteral -> HexLiteral .)
    MULTIPLY        reduce using rule 73 (IntLiteral -> HexLiteral .)
    DIVIDE          reduce using rule 73 (IntLiteral -> HexLiteral .)
    MODULO          reduce using rule 73 (IntLiteral -> HexLiteral .)
    SHIFT_L         reduce using rule 73 (IntLiteral -> HexLiteral .)
    SHIFT_R         reduce using rule 73 (IntLiteral -> HexLiteral .)
    LSHIFT_R        reduce using rule 73 (IntLiteral -> HexLiteral .)
    GREATER         reduce using rule 73 (IntLiteral -> HexLiteral .)
    LESS            reduce using rule 73 (IntLiteral -> HexLiteral .)
    GREATER_EQUAL   reduce using rule 73 (IntLiteral -> HexLiteral .)
    LESS_EQUAL      reduce using rule 73 (IntLiteral -> HexLiteral .)
    EQUAL           reduce using rule 73 (IntLiteral -> HexLiteral .)
    NOT_EQUAL       reduce using rule 73 (IntLiteral -> HexLiteral .)
    LOGICAL_AND     reduce using rule 73 (IntLiteral -> HexLiteral .)
    LOGICAL_OR      reduce using rule 73 (IntLiteral -> HexLiteral .)


state 29

    (74) DecimalLiteral -> NUMBER .

    RBRACKET        reduce using rule 74 (DecimalLiteral -> NUMBER .)
    SEMICOLON       reduce using rule 74 (DecimalLiteral -> NUMBER .)
    RPAREN          reduce using rule 74 (DecimalLiteral -> NUMBER .)
    COMMA           reduce using rule 74 (DecimalLiteral -> NUMBER .)
    PLUS            reduce using rule 74 (DecimalLiteral -> NUMBER .)
    MINUS           reduce using rule 74 (DecimalLiteral -> NUMBER .)
    MULTIPLY        reduce using rule 74 (DecimalLiteral -> NUMBER .)
    DIVIDE          reduce using rule 74 (DecimalLiteral -> NUMBER .)
    MODULO          reduce using rule 74 (DecimalLiteral -> NUMBER .)
    SHIFT_L         reduce using rule 74 (DecimalLiteral -> NUMBER .)
    SHIFT_R         reduce using rule 74 (DecimalLiteral -> NUMBER .)
    LSHIFT_R        reduce using rule 74 (DecimalLiteral -> NUMBER .)
    GREATER         reduce using rule 74 (DecimalLiteral -> NUMBER .)
    LESS            reduce using rule 74 (DecimalLiteral -> NUMBER .)
    GREATER_EQUAL   reduce using rule 74 (DecimalLiteral -> NUMBER .)
    LESS_EQUAL      reduce using rule 74 (DecimalLiteral -> NUMBER .)
    EQUAL           reduce using rule 74 (DecimalLiteral -> NUMBER .)
    NOT_EQUAL       reduce using rule 74 (DecimalLiteral -> NUMBER .)
    LOGICAL_AND     reduce using rule 74 (DecimalLiteral -> NUMBER .)
    LOGICAL_OR      reduce using rule 74 (DecimalLiteral -> NUMBER .)


state 30

    (75) HexLiteral -> HEX_NUMBER .

    RBRACKET        reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    SEMICOLON       reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    RPAREN          reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    COMMA           reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    PLUS            reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    MINUS           reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    MULTIPLY        reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    DIVIDE          reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    MODULO          reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    SHIFT_L         reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    SHIFT_R         reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    LSHIFT_R        reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    GREATER         reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    LESS            reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    GREATER_EQUAL   reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    LESS_EQUAL      reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    EQUAL           reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    NOT_EQUAL       reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    LOGICAL_AND     reduce using rule 75 (HexLiteral -> HEX_NUMBER .)
    LOGICAL_OR      reduce using rule 75 (HexLiteral -> HEX_NUMBER .)


state 31

    (10) ParamList -> Type . IDENTIFIER
    (11) ParamList -> Type . IDENTIFIER COMMA ParamList

    IDENTIFIER      shift and go to state 35


state 32

    (8) MethodDecl -> Type IDENTIFIER LPAREN ParamList . RPAREN Block

    RPAREN          shift and go to state 36


state 33

    (9) MethodDecl -> VOID IDENTIFIER LPAREN RPAREN . Block
    (12) Block -> . LBRACE VarDecls Statements RBRACE

    LBRACE          shift and go to state 38

    Block                          shift and go to state 37

state 34

    (5) FieldDecl -> Type IDENTIFIER LBRACKET IntLiteral RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 39


state 35

    (10) ParamList -> Type IDENTIFIER .
    (11) ParamList -> Type IDENTIFIER . COMMA ParamList

    RPAREN          reduce using rule 10 (ParamList -> Type IDENTIFIER .)
    COMMA           shift and go to state 40


state 36

    (8) MethodDecl -> Type IDENTIFIER LPAREN ParamList RPAREN . Block
    (12) Block -> . LBRACE VarDecls Statements RBRACE

    LBRACE          shift and go to state 38

    Block                          shift and go to state 41

state 37

    (9) MethodDecl -> VOID IDENTIFIER LPAREN RPAREN Block .

    INT             reduce using rule 9 (MethodDecl -> VOID IDENTIFIER LPAREN RPAREN Block .)
